# projects_applications_dl

./: README.md  pyproject.toml
homework_1/: segmentation_homework.ipynb
homework_2/: Assignment_02_data_preparation_Colab.ipynb
